<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="null_string"></string>
    
    <string name="message_palette_bug">It looks like palette cycling effects don\'t work on your particular phone (yet), so I\'ve disabled them by default in the settings.</string>
    
    <string name="app_name">Abstract Art</string>
    <string name="app_description">100s of psychedelic animated backgrounds based on the classic SNES game Earthbound.</string>
    
    <string name="wallpaper_settings">Abstract Art Settings</string>
    
    <string name="settings_background_selection_title">Background selection</string>
    <string name="settings_background_chooser">Background viewer</string>
    <string name="settings_appearance_title">Appearance</string>
    <string name="settings_appearance_summary">Scaling, framerate, effects, etc.</string>
    <string name="settings_behavior_title">Behavior</string>
    <string name="settings_behavior_summary">Background cycling and control options</string>
    <string name="settings_rendering_title">Rendering</string>
    <string name="settings_cache_title">Cache</string>
    <string name="settings_options_title">Options</string>
    <string name="settings_misc_title">Miscellaneous</string>
    
    <string name="selection_mode_title">Selection mode</string>
    <string name="selection_mode_summary">How background changes are decided</string>
    <string name="enable_palette_effects_title">Enable palette effects</string>
    <string name="enable_palette_effects_summary">May not work on all devices</string>
    <string name="frame_rate_title">Frame rate</string>
    <string name="frame_rate_summary">%s frames per second</string>
    <string name="native_resolution_title">Device-native resolution</string>
    <string name="native_resolution_summary">Experimental; don\'t use this</string>
    <string name="precalculate_cache_title">Precalculate cache</string>
    <string name="precalculate_cache_summary">Precalculate internal data</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="clear_cache_summary">Clear internal data + thumbnails</string>
    <string name="double_tap_behavior_title">Double tap behavior</string>
    <string name="double_tap_behavior_summary">What happens when you double tap the wallpaper screen</string>
    <string name="framerate_cap_title">Framerate cap</string>
    <string name="framerate_cap_summary">Lower values may improve battery life and UI response at the cost of fluidity</string>
    <string name="output_scaling_title">Output scaling mode</string>
    <string name="output_scaling_summary">How to scale the low-res background up to cover the display</string>
    <string name="auto_cycle_title">Auto background cycle</string>
    <string name="auto_cycle_summary">If and when to automatically skip to the next background</string>
    
    <string name="processing">Processing&#8230;</string>
    <string name="processed_all_backgrounds">Processed all backgrounds.</string>
    <string name="processed_n_of_n_backgrounds">Processed %1$d of %2$d backgrounds.</string>
    <string name="enable_letterboxing_title">Enable letterboxing</string>
    <string name="enable_letterboxing_summary">Black borders above and below</string>
    <string name="letterbox_size_title">Letterbox size</string>
    <string name="enable_enemies_summary">Show enemy game sprites</string>
    <string name="enable_enemies_title">Enable enemies</string>
    <string name="listpref_title_changelog">Changelog</string>
    <string name="listpref_title_contact">Contact the author</string>
    <string name="listpref_title_donate">Donate</string>
    
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More&#8230;</string>
    
    <string-array name="double_tap_behavior_entries">        
        <item>Do nothing</item>
        <item>Next background</item>
        <item>Open chooser</item>
        <item>Open settings</item>
    </string-array>
    
    <string-array name="auto_cycle_entries">
        <item>Don\'t care</item>
        <item>Custom interval</item>
        <item>Never</item>
    </string-array>
    
    <string-array name="auto_cycle_duration_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    
    <string-array name="output_scaling_entries">
        <item>Exact fit (smooth)</item>
        <item>Nearest integer multiple (sharp)</item>
    </string-array>
    
    <string-array name="letterbox_size_entries">        
        <item>Default (varies)</item>
        <item>Absolute minimum</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    
    <string-array name="framerate_cap_entries">        
        <item>15 fps</item>
        <item>30 fps</item>
        <item>45 fps</item>
        <item>60 fps</item>
    </string-array>
    
</resources>