<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/wallpaper_settings"
                  android:key="wallpaper_settings">
                  
    <PreferenceScreen
        android:key="background_selector"
        android:title="@string/settings_background_selector_title"
        android:summary="@string/settings_background_selector_summary">
    
        <intent 
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.georgewhiteside.android.abstractart"
            android:targetClass="net.georgewhiteside.android.abstractart.settings.BackgroundSelector" />
    
    </PreferenceScreen>
    
    <PreferenceCategory android:title="@string/settings_options_title">
        
        <PreferenceScreen
            android:key="behavior_screen"
            android:title="@string/settings_behavior_title"
            android:summary="@string/settings_behavior_summary">
        
	        <ListPreference android:key="stringDoubleTapBehavior"
	            android:defaultValue="next"
	            android:title="@string/double_tap_behavior_title"
	            android:summary="@string/double_tap_behavior_summary"
	            android:entries="@array/double_tap_behavior_entries"
	            android:entryValues="@array/double_tap_behavior_values" />
	        
	        <ListPreference android:key="autoCycleBehavior"
	            android:defaultValue="hidden"
	            android:title="@string/auto_cycle_behavior_title"
	            android:summary="@string/auto_cycle_behavior_summary"
	            android:entries="@array/auto_cycle_behavior_entries"
	            android:entryValues="@array/auto_cycle_behavior_values" />
	        
	        <net.georgewhiteside.android.abstractart.settings.TimerPicker android:key="autoCycleTime"
                android:defaultValue="@string/default_auto_cycle_time"
                android:title="@string/auto_cycle_interval_title"
                android:summary="@string/auto_cycle_interval_summary" />
	        
	    </PreferenceScreen>
        
        <PreferenceScreen
            android:key="rendering_screen"
            android:title="@string/settings_rendering_title"
            android:summary="@string/settings_rendering_summary">
            
            <ListPreference android:key="outputScaling"
	            android:defaultValue="smooth"
	            android:title="@string/output_scaling_title"
	            android:summary="@string/output_scaling_summary"
	            android:entries="@array/output_scaling_entries"
	            android:entryValues="@array/output_scaling_values" />
            
            <net.georgewhiteside.android.abstractart.settings.FrameratePreference android:key="framerateCap"
		        android:defaultValue="@string/default_framerate_cap"
		        android:title="@string/framerate_cap_title" 
		        android:summary="@string/framerate_cap_summary" />
        
	        <CheckBoxPreference android:key="enableEnemies"
	            android:defaultValue="true"
	            android:title="@string/enable_enemies_title"
	            android:summary="@string/enable_enemies_summary" />
	        
	        <CheckBoxPreference android:key="enableLetterboxing"
	            android:disableDependentsState="false"
	            android:defaultValue="false"
	            android:title="@string/enable_letterboxing_title"
	            android:summary="@string/enable_letterboxing_summary" />
	        
	        <ListPreference android:key="letterboxSize"
	            android:defaultValue="variable"
	            android:title="@string/letterbox_size_title"
	            android:entries="@array/letterbox_size_entries"
	            android:entryValues="@array/letterbox_size_values"
	            android:dependency="enableLetterboxing" />
	        
	        <CheckBoxPreference android:key="enablePaletteEffects"
	            android:defaultValue="true"
	            android:title="@string/enable_palette_effects_title"
	            android:summary="@string/enable_palette_effects_summary" />
		        
		</PreferenceScreen>
        
    </PreferenceCategory>
    
    <!--PreferenceCategory android:title="@string/settings.rendering_title">

	    <CheckBoxPreference
	        android:defaultValue="false"
	        android:key="boolNativeResolution"
	        android:title="@string/native_resolution_title"
	        android:summary="@string/native_resolution_summary" />

    </PreferenceCategory-->
    
    <PreferenceCategory android:title="@string/settings_misc_title">
        
        <Preference
            android:key="changelog"
            android:title="@string/listpref_title_changelog" />
        
        <Preference
            android:key="contact"
            android:title="@string/listpref_title_contact" />
        
        <Preference
            android:key="donate"
            android:title="@string/listpref_title_donate" />

    </PreferenceCategory>
    
    <!--PreferenceCategory android:title="@string/settings.cache_title">
        
        <net.georgewhiteside.android.abstractart.settings.CreateImageCachePreference
            android:title="@string/precalculate_cache_title"
            android:summary="@string/precalculate_cache_summary" />
        
        <net.georgewhiteside.android.abstractart.settings.ClearCachePreference
            android:title="@string/clear_cache_title"
            android:summary="@string/clear_cache_summary" />
        
    </PreferenceCategory-->

</PreferenceScreen>